# cerf_FPM

./: .gitignore  CMakeLists.txt  README.md  cerf.f90  cerf.m  cerf.py  cerf_lib.f90  erf_mpmath.f90  find_relative_error.py  main.py  mpmath_erf_test_data_generator.py  plot_errors.py  scipy_Faddeeva.py
fortran_implementation/: CMakeLists.txt  cerf.f90  cerf_lib.f90
python_implementation/: cerf.py  main.py  main_old.py
